antlr/yayatsyi/YayatsyiGrammarParser.java
// Generated from YayatsyiGrammar.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class YayatsyiGrammarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LINE_COMMENT=1, BOOLEAN_OPTION=2, SHIFT_OPTION=3, BLANK_SYMBOL=4, DEFAULT_TAPE=5, 
		PROGRAM_DEFINITION=6, STATES_DEFINITION=7, TAPE_ALPHABET_DEFINITION=8, 
		RUN_DEFINITION=9, INITIAL_STATE_DEFINITION=10, FINAL_STATES_DEFINITION=11, 
		TRANSITION_FUNCTION_DEFINITION=12, TRANSITION_FUNCTION_STATE=13, TRANSITION_FUNCTION_READ=14, 
		TRANSITION_FUNCTION_WRITE=15, TRANSITION_FUNCTION_SHIFT=16, TAPES_DEFINITION=17, 
		TAPE_INSTANCE=18, READ_ONLY=19, ATTRIBUTES_BEGINNING=20, ATTRIBUTES_END=21, 
		SET_BEGINNING=22, SET_END=23, ARGUMENT_BEGINNING=24, ARGUMENT_END=25, 
		SET_ASSIGNMENT=26, EXPRESSION_DELIMITER=27, ELEMENT_ASSIGNMENT=28, PROGRAM_DIRECTIVE=29, 
		LINE_BEGINNING=30, TRANSITION_FUNCTION_TO=31, STRING_DELIMITER=32, COMMA=33, 
		NONDETERMINISTIC_OPTION=34, PROBABILISTIC_OPTION=35, PROBABILITY_QUOTIENT=36, 
		PROBABILITY_DEFINITION=37, PROBABILITY_EQUAL=38, ORACLE=39, NO_ORACLE=40, 
		ORACLE_TAPE=41, QUESTION_STATE=42, ANSWER_STATE=43, ORACLE_TAPE_ALPHABET_DEFINITION=44, 
		INNER_ALPHABET_SYMBOL=45, TAPE_ALPHABET_SYMBOL=46, TAPE_INSTANCE_SYMBOL=47, 
		IDENTIFIER=48, WHITESPACE=49;
	public static final String[] tokenNames = {
		"<INVALID>", "LINE_COMMENT", "BOOLEAN_OPTION", "SHIFT_OPTION", "BLANK_SYMBOL", 
		"DEFAULT_TAPE", "'prg'", "'states'", "'tape_alphabet'", "'run'", "'initial_state'", 
		"'final_states'", "'transition_function'", "'state'", "'read'", "'write'", 
		"'shift'", "'tapes'", "'tape_instance'", "'read_only'", "'['", "']'", 
		"'{'", "'}'", "'('", "')'", "':='", "'.'", "':'", "'\\'", "'+'", "'->'", 
		"'''", "','", "'nondeterministic'", "'probabilistic'", "PROBABILITY_QUOTIENT", 
		"'p'", "'='", "'oracle'", "NO_ORACLE", "ORACLE_TAPE", "QUESTION_STATE", 
		"ANSWER_STATE", "'oracle_alphabet'", "INNER_ALPHABET_SYMBOL", "TAPE_ALPHABET_SYMBOL", 
		"TAPE_INSTANCE_SYMBOL", "IDENTIFIER", "WHITESPACE"
	};
	public static final int
		RULE_root = 0, RULE_program_header = 1, RULE_program_body = 2, RULE_run = 3, 
		RULE_program_attrs = 4, RULE_nondeterministic = 5, RULE_probabilistic = 6, 
		RULE_oracle = 7, RULE_tapes = 8, RULE_read_only = 9, RULE_possible_tapes = 10, 
		RULE_run_attrs = 11, RULE_states = 12, RULE_possible_states = 13, RULE_tape_alphabet = 14, 
		RULE_oracle_alphabet = 15, RULE_generic_alphabet = 16, RULE_possible_tape_alphabet_symbol = 17, 
		RULE_initial_state = 18, RULE_final_states = 19, RULE_transition_function = 20, 
		RULE_trans_func_line = 21, RULE_transition_function_state_from = 22, RULE_transition_function_state_to = 23, 
		RULE_transition_function_state = 24, RULE_transition_function_read = 25, 
		RULE_transition_function_write = 26, RULE_transition_function_shift = 27, 
		RULE_tape_argument = 28, RULE_trans_func_line_attrs = 29, RULE_trans_func_line_attrs_option = 30, 
		RULE_probability = 31;
	public static final String[] ruleNames = {
		"root", "program_header", "program_body", "run", "program_attrs", "nondeterministic", 
		"probabilistic", "oracle", "tapes", "read_only", "possible_tapes", "run_attrs", 
		"states", "possible_states", "tape_alphabet", "oracle_alphabet", "generic_alphabet", 
		"possible_tape_alphabet_symbol", "initial_state", "final_states", "transition_function", 
		"trans_func_line", "transition_function_state_from", "transition_function_state_to", 
		"transition_function_state", "transition_function_read", "transition_function_write", 
		"transition_function_shift", "tape_argument", "trans_func_line_attrs", 
		"trans_func_line_attrs_option", "probability"
	};

	@Override
	public String getGrammarFileName() { return "YayatsyiGrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public YayatsyiGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RootContext extends ParserRuleContext {
		public Program_bodyContext program_body() {
			return getRuleContext(Program_bodyContext.class,0);
		}
		public Program_headerContext program_header() {
			return getRuleContext(Program_headerContext.class,0);
		}
		public RunContext run() {
			return getRuleContext(RunContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).exitRoot(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64); program_header();
			setState(65); program_body();
			setState(66); run();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_headerContext extends ParserRuleContext {
		public Program_attrsContext program_attrs() {
			return getRuleContext(Program_attrsContext.class,0);
		}
		public TerminalNode ATTRIBUTES_END() { return getToken(YayatsyiGrammarParser.ATTRIBUTES_END, 0); }
		public TerminalNode EXPRESSION_DELIMITER() { return getToken(YayatsyiGrammarParser.EXPRESSION_DELIMITER, 0); }
		public TerminalNode PROGRAM_DEFINITION() { return getToken(YayatsyiGrammarParser.PROGRAM_DEFINITION, 0); }
		public TerminalNode ATTRIBUTES_BEGINNING() { return getToken(YayatsyiGrammarParser.ATTRIBUTES_BEGINNING, 0); }
		public Program_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).enterProgram_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).exitProgram_header(this);
		}
	}

	public final Program_headerContext program_header() throws RecognitionException {
		Program_headerContext _localctx = new Program_headerContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68); match(PROGRAM_DEFINITION);
			setState(73);
			_la = _input.LA(1);
			if (_la==ATTRIBUTES_BEGINNING) {
				{
				setState(69); match(ATTRIBUTES_BEGINNING);
				setState(70); program_attrs();
				setState(71); match(ATTRIBUTES_END);
				}
			}

			setState(75); match(EXPRESSION_DELIMITER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_bodyContext extends ParserRuleContext {
		public Transition_functionContext transition_function() {
			return getRuleContext(Transition_functionContext.class,0);
		}
		public Oracle_alphabetContext oracle_alphabet() {
			return getRuleContext(Oracle_alphabetContext.class,0);
		}
		public Tape_alphabetContext tape_alphabet() {
			return getRuleContext(Tape_alphabetContext.class,0);
		}
		public StatesContext states() {
			return getRuleContext(StatesContext.class,0);
		}
		public Final_statesContext final_states() {
			return getRuleContext(Final_statesContext.class,0);
		}
		public Initial_stateContext initial_state() {
			return getRuleContext(Initial_stateContext.class,0);
		}
		public Program_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).enterProgram_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).exitProgram_body(this);
		}
	}

	public final Program_bodyContext program_body() throws RecognitionException {
		Program_bodyContext _localctx = new Program_bodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_program_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); states();
			setState(78); initial_state();
			setState(79); final_states();
			setState(80); tape_alphabet();
			setState(82);
			_la = _input.LA(1);
			if (_la==ORACLE_TAPE_ALPHABET_DEFINITION) {
				{
				setState(81); oracle_alphabet();
				}
			}

			setState(84); transition_function();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RunContext extends ParserRuleContext {
		public TerminalNode ATTRIBUTES_END() { return getToken(YayatsyiGrammarParser.ATTRIBUTES_END, 0); }
		public TerminalNode EXPRESSION_DELIMITER() { return getToken(YayatsyiGrammarParser.EXPRESSION_DELIMITER, 0); }
		public TerminalNode RUN_DEFINITION() { return getToken(YayatsyiGrammarParser.RUN_DEFINITION, 0); }
		public Run_attrsContext run_attrs() {
			return getRuleContext(Run_attrsContext.class,0);
		}
		public TerminalNode ATTRIBUTES_BEGINNING() { return getToken(YayatsyiGrammarParser.ATTRIBUTES_BEGINNING, 0); }
		public RunContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_run; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).enterRun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).exitRun(this);
		}
	}

	public final RunContext run() throws RecognitionException {
		RunContext _localctx = new RunContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_run);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86); match(RUN_DEFINITION);
			setState(91);
			_la = _input.LA(1);
			if (_la==ATTRIBUTES_BEGINNING) {
				{
				setState(87); match(ATTRIBUTES_BEGINNING);
				setState(88); run_attrs();
				setState(89); match(ATTRIBUTES_END);
				}
			}

			setState(93); match(EXPRESSION_DELIMITER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_attrsContext extends ParserRuleContext {
		public List<TapesContext> tapes() {
			return getRuleContexts(TapesContext.class);
		}
		public NondeterministicContext nondeterministic(int i) {
			return getRuleContext(NondeterministicContext.class,i);
		}
		public OracleContext oracle(int i) {
			return getRuleContext(OracleContext.class,i);
		}
		public Read_onlyContext read_only(int i) {
			return getRuleContext(Read_onlyContext.class,i);
		}
		public List<Read_onlyContext> read_only() {
			return getRuleContexts(Read_onlyContext.class);
		}
		public List<ProbabilisticContext> probabilistic() {
			return getRuleContexts(ProbabilisticContext.class);
		}
		public TerminalNode LINE_BEGINNING(int i) {
			return getToken(YayatsyiGrammarParser.LINE_BEGINNING, i);
		}
		public TapesContext tapes(int i) {
			return getRuleContext(TapesContext.class,i);
		}
		public List<NondeterministicContext> nondeterministic() {
			return getRuleContexts(NondeterministicContext.class);
		}
		public List<TerminalNode> LINE_BEGINNING() { return getTokens(YayatsyiGrammarParser.LINE_BEGINNING); }
		public List<OracleContext> oracle() {
			return getRuleContexts(OracleContext.class);
		}
		public ProbabilisticContext probabilistic(int i) {
			return getRuleContext(ProbabilisticContext.class,i);
		}
		public Program_attrsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_attrs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).enterProgram_attrs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).exitProgram_attrs(this);
		}
	}

	public final Program_attrsContext program_attrs() throws RecognitionException {
		Program_attrsContext _localctx = new Program_attrsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_program_attrs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LINE_BEGINNING) {
				{
				{
				setState(95); match(LINE_BEGINNING);
				setState(101);
				switch (_input.LA(1)) {
				case NONDETERMINISTIC_OPTION:
					{
					setState(96); nondeterministic();
					}
					break;
				case PROBABILISTIC_OPTION:
					{
					setState(97); probabilistic();
					}
					break;
				case ORACLE:
					{
					setState(98); oracle();
					}
					break;
				case TAPES_DEFINITION:
					{
					setState(99); tapes();
					}
					break;
				case READ_ONLY:
					{
					setState(100); read_only();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NondeterministicContext extends ParserRuleContext {
		public TerminalNode BOOLEAN_OPTION() { return getToken(YayatsyiGrammarParser.BOOLEAN_OPTION, 0); }
		public TerminalNode ELEMENT_ASSIGNMENT() { return getToken(YayatsyiGrammarParser.ELEMENT_ASSIGNMENT, 0); }
		public TerminalNode NONDETERMINISTIC_OPTION() { return getToken(YayatsyiGrammarParser.NONDETERMINISTIC_OPTION, 0); }
		public NondeterministicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nondeterministic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).enterNondeterministic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).exitNondeterministic(this);
		}
	}

	public final NondeterministicContext nondeterministic() throws RecognitionException {
		NondeterministicContext _localctx = new NondeterministicContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_nondeterministic);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108); match(NONDETERMINISTIC_OPTION);
			setState(109); match(ELEMENT_ASSIGNMENT);
			setState(110); match(BOOLEAN_OPTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProbabilisticContext extends ParserRuleContext {
		public TerminalNode BOOLEAN_OPTION() { return getToken(YayatsyiGrammarParser.BOOLEAN_OPTION, 0); }
		public TerminalNode ELEMENT_ASSIGNMENT() { return getToken(YayatsyiGrammarParser.ELEMENT_ASSIGNMENT, 0); }
		public TerminalNode PROBABILISTIC_OPTION() { return getToken(YayatsyiGrammarParser.PROBABILISTIC_OPTION, 0); }
		public ProbabilisticContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_probabilistic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).enterProbabilistic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).exitProbabilistic(this);
		}
	}

	public final ProbabilisticContext probabilistic() throws RecognitionException {
		ProbabilisticContext _localctx = new ProbabilisticContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_probabilistic);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112); match(PROBABILISTIC_OPTION);
			setState(113); match(ELEMENT_ASSIGNMENT);
			setState(114); match(BOOLEAN_OPTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OracleContext extends ParserRuleContext {
		public TerminalNode ORACLE() { return getToken(YayatsyiGrammarParser.ORACLE, 0); }
		public TerminalNode ELEMENT_ASSIGNMENT() { return getToken(YayatsyiGrammarParser.ELEMENT_ASSIGNMENT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(YayatsyiGrammarParser.IDENTIFIER, 0); }
		public TerminalNode NO_ORACLE() { return getToken(YayatsyiGrammarParser.NO_ORACLE, 0); }
		public OracleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oracle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).enterOracle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).exitOracle(this);
		}
	}

	public final OracleContext oracle() throws RecognitionException {
		OracleContext _localctx = new OracleContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_oracle);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); match(ORACLE);
			setState(117); match(ELEMENT_ASSIGNMENT);
			setState(118);
			_la = _input.LA(1);
			if ( !(_la==NO_ORACLE || _la==IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TapesContext extends ParserRuleContext {
		public TerminalNode SET_ASSIGNMENT() { return getToken(YayatsyiGrammarParser.SET_ASSIGNMENT, 0); }
		public List<TerminalNode> COMMA() { return getTokens(YayatsyiGrammarParser.COMMA); }
		public TerminalNode SET_BEGINNING() { return getToken(YayatsyiGrammarParser.SET_BEGINNING, 0); }
		public TerminalNode TAPES_DEFINITION() { return getToken(YayatsyiGrammarParser.TAPES_DEFINITION, 0); }
		public List<Possible_tapesContext> possible_tapes() {
			return getRuleContexts(Possible_tapesContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(YayatsyiGrammarParser.COMMA, i);
		}
		public TerminalNode SET_END() { return getToken(YayatsyiGrammarParser.SET_END, 0); }
		public Possible_tapesContext possible_tapes(int i) {
			return getRuleContext(Possible_tapesContext.class,i);
		}
		public TapesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tapes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).enterTapes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).exitTapes(this);
		}
	}

	public final TapesContext tapes() throws RecognitionException {
		TapesContext _localctx = new TapesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_tapes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120); match(TAPES_DEFINITION);
			setState(121); match(SET_ASSIGNMENT);
			setState(122); match(SET_BEGINNING);
			setState(123); possible_tapes();
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(124); match(COMMA);
				setState(125); possible_tapes();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131); match(SET_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Read_onlyContext extends ParserRuleContext {
		public TerminalNode READ_ONLY() { return getToken(YayatsyiGrammarParser.READ_ONLY, 0); }
		public TerminalNode BOOLEAN_OPTION() { return getToken(YayatsyiGrammarParser.BOOLEAN_OPTION, 0); }
		public TerminalNode ELEMENT_ASSIGNMENT() { return getToken(YayatsyiGrammarParser.ELEMENT_ASSIGNMENT, 0); }
		public Read_onlyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read_only; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).enterRead_only(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).exitRead_only(this);
		}
	}

	public final Read_onlyContext read_only() throws RecognitionException {
		Read_onlyContext _localctx = new Read_onlyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_read_only);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); match(READ_ONLY);
			setState(134); match(ELEMENT_ASSIGNMENT);
			setState(135); match(BOOLEAN_OPTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Possible_tapesContext extends ParserRuleContext {
		public TerminalNode ORACLE_TAPE() { return getToken(YayatsyiGrammarParser.ORACLE_TAPE, 0); }
		public TerminalNode DEFAULT_TAPE() { return getToken(YayatsyiGrammarParser.DEFAULT_TAPE, 0); }
		public Possible_tapesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_possible_tapes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).enterPossible_tapes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).exitPossible_tapes(this);
		}
	}

	public final Possible_tapesContext possible_tapes() throws RecognitionException {
		Possible_tapesContext _localctx = new Possible_tapesContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_possible_tapes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			_la = _input.LA(1);
			if ( !(_la==DEFAULT_TAPE || _la==ORACLE_TAPE) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Run_attrsContext extends ParserRuleContext {
		public Tape_argumentContext tape_argument() {
			return getRuleContext(Tape_argumentContext.class,0);
		}
		public TerminalNode ELEMENT_ASSIGNMENT() { return getToken(YayatsyiGrammarParser.ELEMENT_ASSIGNMENT, 0); }
		public TerminalNode TAPE_INSTANCE_SYMBOL() { return getToken(YayatsyiGrammarParser.TAPE_INSTANCE_SYMBOL, 0); }
		public TerminalNode TAPE_INSTANCE() { return getToken(YayatsyiGrammarParser.TAPE_INSTANCE, 0); }
		public Run_attrsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_run_attrs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).enterRun_attrs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YayatsyiGrammarListener ) ((YayatsyiGrammarListener)listener).exitRun_attrs(this);
		}
	}

	public final Run_attrsContext run_attrs() throws RecognitionException {
		Run_attrsContext _localctx = new Run_attrsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_run_attrs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139); match(TAPE_INSTANCE);
			setState(141);
			_la = _input.LA(1);
			if (_la==ARGUMENT_BEGINNING) {
				{
				setState(140); tape_argument();
				}
			}

			setState(143); match(ELEMENT_ASSIGNMENT);
			setState(144); match(TAPE_INSTANCE_SYMBOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
